<resources>
    <string name="app_name">SpringHack</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gofight">Сражаться!</string>
    <string name="labelmetka">(Описание)</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="start_title" translatable="false">ГазПромБанк</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="firstly" translatable="false"><u>Впервые тут? Нажмите сюда</u></string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="cont">Continue</string>
    <string name="contu"><u>Continue ></u></string>
    <string name="add_users">Adding members</string>
    <string name="add_task">+ Add Task</string>

</resources>
