<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_primary"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="123dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/ic_logo" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:capitalize="characters"
            android:text="@string/start_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:fontFamily="sans-serif-medium" />

        <EditText
            android:id="@+id/Email"
            style="@style/inputPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/input_primary"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text|textEmailAddress" />

        <EditText
            android:id="@+id/Password"
            style="@style/inputPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/input_primary"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/signIn"
            style="@style/buttonPrimary"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/login"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/signUp"
            style="@style/buttonLight"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="Регистрация" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>